# zugkontrolle

./: .gitignore  .gitmodules  Cargo.toml  ChangeLog.md  Cross.toml  Doppeloval.zug  Issues.txt  LICENSE  Märklin.zug  README.md  ToDo.txt  Zugkontrolle.cabal  build.rs  build_raspi.py  cabal.project  deploy.py  floskell.json  hie.yaml  package.yaml  prepare_release.py  resources.rc  run_floskell.bat  run_floskell.sh  rust-toolchain.toml  rustfmt.toml  stack.yaml
.cargo/: config
zugkontrolle-anschluss/: Cargo.toml
zugkontrolle-anschluss/src/: de_serialisieren.rs  level.rs  lib.rs  pcf8574.rs  pin.rs  polarität.rs  rppal.rs  trigger.rs
zugkontrolle-anschluss/src/pcf8574/: test.rs
zugkontrolle-anschluss/src/pin/: input.rs  output.rs  pwm.rs
zugkontrolle-anschluss/src/rppal/: gpio.rs  i2c.rs  pwm.rs
zugkontrolle-application/: Cargo.toml  build.rs
zugkontrolle-application/src/: anschluss.rs  auswahl.rs  bewegen.rs  bootstrap.rs  drehen.rs  empfänger.rs  farbwahl.rs  flat_map.rs  fonts.rs  geschwindigkeit.rs  kontakt.rs  lib.rs  lizenzen.rs  map_mit_zustand.rs  map_operation.rs  modal.rs  nachricht.rs  speichern_laden.rs  streckenabschnitt.rs  update.rs  view.rs  weiche.rs
zugkontrolle-application/src/lizenzen/: test.rs  texte.rs
zugkontrolle-application/src/style/: container.rs  linie.rs  sammlung.rs  tab_bar.rs  thema.rs
zugkontrolle-argumente/: Cargo.toml
zugkontrolle-argumente/src/: lib.rs
zugkontrolle-derive/: Cargo.toml
zugkontrolle-derive/src/: alias.rs  chain.rs  clone.rs  daten.rs  debug.rs  lib.rs  lookup.rs  maps_methoden.rs  modus.rs  richtung.rs  utils.rs  weiche.rs
zugkontrolle-gleis/: Cargo.toml
zugkontrolle-gleis/src/: gerade.rs  id.rs  kreuzung.rs  kurve.rs  lib.rs  steuerung.rs  zugtyp.rs
zugkontrolle-gleis/src/steuerung/: aktualisieren.rs  geschwindigkeit.rs  kontakt.rs  plan.rs  streckenabschnitt.rs  weiche.rs
zugkontrolle-gleis/src/weiche/: dreiwege.rs  gerade.rs  kurve.rs  s_kurve.rs
zugkontrolle-gleis/src/zugtyp/: lego.rs  märklin.rs
zugkontrolle-gleise/: Cargo.toml
zugkontrolle-gleise/src/: daten.rs  draw.rs  hinzufügen_entfernen.rs  knopf.rs  lib.rs  nachricht.rs  update.rs  util.rs
zugkontrolle-gleise/src/daten/: de_serialisieren.rs  v2.rs  v3.rs  v4.rs
zugkontrolle-id/: Cargo.toml
zugkontrolle-id/src/: eindeutig.rs  lib.rs  test.rs
zugkontrolle-lizenzen/: Cargo.toml  build.rs
zugkontrolle-lizenzen-macros/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/associated_list-0.2.0/: README.md
zugkontrolle-lizenzen-macros/lizenzen/block2-0.3.0/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/com_macros_support-0.6.0/: Cargo.toml.orig
zugkontrolle-lizenzen-macros/lizenzen/drm-0.11.1/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/fast-srgb8-1.0.0/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/gpu-descriptor-0.2.4/: Cargo.toml  Cargo.toml.orig
zugkontrolle-lizenzen-macros/lizenzen/iced-0.12.1/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/iced_aw-0.9.2/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/iced_wgpu-0.12.1/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/int-enum-1.1.1/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/kommandozeilen_argumente_derive-0.2.0/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/lyon_algorithms-1.0.4/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/lyon_path-1.0.4/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/naga-0.19.2/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/nonempty-0.9.0/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/palette_derive-0.7.6/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/raw-window-handle-0.6.1/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/self_cell-1.0.4/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/smithay-clipboard-0.7.1/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/syn-2.0.61/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/wayland-cursor-0.31.1/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/wayland-protocols-wlr-0.2.0/: Cargo.toml  README.md
zugkontrolle-lizenzen-macros/lizenzen/wgpu-core-0.19.4/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/wgpu-hal-0.19.4/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/xkeysym-0.2.0/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/yazi-0.1.6/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/zbus-4.2.0/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/zeno-0.2.3/: Cargo.toml  README.md
zugkontrolle-lizenzen-macros/lizenzen/zvariant-4.0.3/: Cargo.toml
zugkontrolle-lizenzen-macros/lizenzen/zvariant_utils-1.1.1/: Cargo.toml
zugkontrolle-lizenzen-macros/src/: lib.rs
zugkontrolle-lizenzen/src/: lib.rs
zugkontrolle-macros/: Cargo.toml  build.rs
zugkontrolle-macros/lizenzen/: CC0.txt  Missing.txt  fetch_licenses.py
zugkontrolle-macros/lizenzen/ab_glyph-0.2.25/: Cargo.toml
zugkontrolle-macros/lizenzen/android-activity-0.5.2/: Cargo.toml
zugkontrolle-macros/lizenzen/ashpd-0.8.1/: Cargo.toml
zugkontrolle-macros/lizenzen/async-fs-2.1.1/: Cargo.toml
zugkontrolle-macros/lizenzen/async-recursion-1.1.0/: Cargo.toml.orig
zugkontrolle-macros/lizenzen/by_address-1.2.1/: Cargo.toml
zugkontrolle-macros/lizenzen/calloop-0.12.4/: Cargo.toml
zugkontrolle-macros/src/: alias.rs  chain.rs  clone.rs  daten.rs  debug.rs  erstelle_enum.rs  from.rs  lib.rs  lizenzen.rs  metadata.rs  nachschlagen.rs  richtung.rs  sum_type_from.rs  util.rs  utils.rs
zugkontrolle-test-util/: Cargo.toml
zugkontrolle-test-util/src/: lib.rs
zugkontrolle-typen/: Cargo.toml
zugkontrolle-typen/src/: canvas.rs  farbe.rs  klick_quelle.rs  lib.rs  mm.rs  nachschlagen.rs  rechteck.rs  skalar.rs  vektor.rs  verbindung.rs  winkel.rs
zugkontrolle-util/: Cargo.toml
zugkontrolle-util/src/: eingeschränkt.rs  lib.rs  sender_trait.rs
zugkontrolle-widget/: Cargo.toml  build.rs
zugkontrolle-widget/src/: anschluss.rs  auswahl.rs  bewegen.rs  drehen.rs  flat_map.rs  fonts.rs  geschwindigkeit.rs  lib.rs  lizenzen.rs  map_mit_zustand.rs  modal.rs  style.rs
zugkontrolle_derive/: Cargo.toml
zugkontrolle_derive/src/: lib.rs
(+934 files in other folders)
