[package]
name = "zugkontrolle"
version = "4.0.0"
authors = ["Wolfgang Witt <Wolfgang.Witt@campus.lmu.de>"]
edition = "2021"
license = "MIT"
publish = false
resolver = "2"
rust-version = "1.69"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true

[features]
default = []
# Add all raspi-specific dependencies. Without this feature, e.g. pins won't change their output value.
raspi = ["rppal"]

# dependencies
[dependencies.zugkontrolle-macros]
path = "zugkontrolle-macros"
version = "4.0.0"

[dependencies]
bincode = "1.3.3"
dyn-clonable = "0.9.0"
either = "1.6.1"
itertools = "0.11.0"
log = "0.4.14"
once_cell = "1.17.1"
parking_lot = "0.12.0"
rstar = "0.11.0"
take_mut = "0.2.2"
unicase = "2.6.0"
num-traits = "0.2.14"

[dependencies.kommandozeilen_argumente]
version = "0.2.1"
features = ["derive"]

[dependencies.nonempty]
version = "0.8.0"
features = ["serialize"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.flexi_logger]
version = "0.25.2"
default_features = false
features = ["colors"]

[dependencies.iced]
version = "0.10.0"
default-features = false
features = ["canvas", "wgpu"]

[dependencies.iced_core]
version = "0.10.0"
default-features = false

[dependencies.iced_futures]
version = "0.7.0"
default-features = false

[dependencies.iced_widget]
version = "0.1.3"
default-features = false

[dependencies.iced_aw]
version = "0.6.0"
default-features = false
features = ["card", "tab_bar", "tabs", "number_input"]

# can't be used on non-raspi systems
[dependencies.rppal]
version = "0.14.1"
optional = true

#[dependencies.libcamera]
#version = "0.2.2"
#optional = true

[build-dependencies]
embed-resource = "2.1.1"

[dev-dependencies]
difference = "2.0.0"
