[package]
name = "zugkontrolle"
version = "4.0.2"
authors = ["spamviech <spamviech@web.de>"]
edition = "2021"
license = "MIT"
publish = false
resolver = "2"
rust-version = "1.69"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true

[features]
default = []
# Add all raspi-specific dependencies. Without this feature, e.g. pins won't change their output value.
raspi = ["rppal"]

[lints.rust]
# Aktiviere alle Warnungen/Lints, außer: box_pointers, non_ascii_idents, unstable_features
absolute_paths_not_starting_with_crate = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
keyword_idents = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
noop_method_call = "warn"
pointer_structural_match = "warn"
rust_2021_incompatible_closure_captures = "warn"
rust_2021_incompatible_or_patterns = "warn"
rust_2021_prefixes_incompatible_syntax = "warn"
rust_2021_prelude_collisions = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"
variant_size_difference = "warn"
box_pointers = "allow"
non_ascii_idents = "allow"
unstable_features = "allow"

# dependencies
[dependencies.zugkontrolle-macros]
path = "zugkontrolle-macros"
version = "4.0.0"

[dependencies]
assoc = "0.1.3"
bincode = "1.3.3"
dyn-clonable = "0.9.0"
either = "1.6.1"
itertools = "0.12.0"
log = "0.4.14"
once_cell = "1.17.1"
parking_lot = "0.12.0"
rstar = "0.11.0"
take_mut = "0.2.2"
unicase = "2.6.0"
num-traits = "0.2.14"

[dependencies.kommandozeilen_argumente]
version = "0.2.1"
features = ["derive"]

[dependencies.nonempty]
version = "0.9.0"
features = ["serialize"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.flexi_logger]
version = "0.27.3"
default_features = false
features = ["colors"]

[dependencies.iced]
version = "0.10.0"
default-features = false
features = ["canvas", "wgpu"]

[dependencies.iced_core]
version = "0.10.0"
default-features = false

[dependencies.iced_futures]
version = "0.7.0"
default-features = false

[dependencies.iced_widget]
version = "0.1.3"
default-features = false

[dependencies.iced_aw]
version = "0.7.0"
default-features = false
features = ["card", "tab_bar", "tabs", "number_input"]

# can't be used on non-raspi systems
[dependencies.rppal]
version = "0.16.1"
optional = true

#[dependencies.libcamera]
#version = "0.2.2"
#optional = true

[build-dependencies]
embed-resource = "2.1.1"

[dev-dependencies]
difference = "2.0.0"
enum-iterator = "1.4.1"
