[package]
name = "zugkontrolle-anschluss"
version = "0.1.0"
authors.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
# Add all raspi-specific dependencies. Without this feature, e.g. pins won't change their output value.
raspi = ["dep:rppal"]

[lints]
workspace = true

# dependencies
[dependencies]
zugkontrolle-argumente.workspace = true
zugkontrolle-id.workspace = true
zugkontrolle-macros.workspace = true
zugkontrolle-util.workspace = true
either.workspace = true
itertools.workspace = true
log.workspace = true
nonempty.workspace = true
num-traits.workspace = true
parking_lot.workspace = true
serde.workspace = true
take_mut.workspace = true

# can't be used on non-raspi systems
[dependencies.rppal]
workspace = true
optional = true

[dev-dependencies]
zugkontrolle-test-util.workspace = true
