[package]
name = "zugkontrolle-argumente"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[lints]
workspace = true

# dependencies
[dependencies]
zugkontrolle-typen.workspace = true
kommandozeilen_argumente.workspace = true
