[package]
name = "zugkontrolle-derive"
version = "3.0.0"
authors = ["Wolfgang Witt <Wolfgang.Witt@campus.lmu.de>"]
edition = "2021"
license = "MIT"
publish = false
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
proc-macro2 = "1.0.29"
Inflector = "0.11.4"
proc-macro-crate = "1.1.0"

[dependencies.syn]
version = "1.0.85"
features = ["full", "extra-traits"]
default_features = false
