[package]
name = "zugkontrolle-gleis"
version = "0.1.0"
authors.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zugkontrolle-anschluss.workspace = true
zugkontrolle-id.workspace = true
zugkontrolle-macros.workspace = true
zugkontrolle-typen.workspace = true
zugkontrolle-util.workspace = true
dyn-clonable.workspace = true
either.workspace = true
log.workspace = true
nonempty.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
serde.workspace = true

[lints]
workspace = true
