[package]
name = "zugkontrolle-lizenzen"
version = "1.0.0"
authors.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zugkontrolle-macros.workspace = true
zugkontrolle-util.workspace = true
once_cell.workspace = true

[build-dependencies]
cargo_metadata.workspace = true

[lints]
workspace = true
