[package]
name = "zugkontrolle-macros"
version = "4.0.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
cargo_metadata = "0.18.1"
proc-macro2 = "1.0.36"
proc-macro-crate = "3.1.0"
quote = "1.0.15"

[dependencies.heck]
version = "0.4.0"
features = ["unicode"]
default-features = false

[dependencies.syn]
version = "2.0.15"
features = ["parsing", "full", "extra-traits"]
default_features = false
