[package]
name = "zugkontrolle-macros"
version = "5.0.1"
authors.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
cargo_metadata.workspace = true
heck.workspace = true
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[build-dependencies]
cargo_metadata.workspace = true
