[package]
name = "zugkontrolle-util"
version = "1.0.0"
authors.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[lints]
workspace = true

# dependencies
[dependencies]
num-traits.workspace = true
serde.workspace = true
unicase.workspace = true
