[package]
name = "zugkontrolle-widget"
version = "1.0.0"
authors.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zugkontrolle-anschluss.workspace = true
zugkontrolle-argumente.workspace = true
zugkontrolle-gleis.workspace = true
zugkontrolle-gleise.workspace = true
zugkontrolle-id.workspace = true
zugkontrolle-macros.workspace = true
zugkontrolle-typen.workspace = true
zugkontrolle-util.workspace = true
enum-iterator.workspace = true
iced_aw.workspace = true
iced_core.workspace = true
iced_widget.workspace = true
iced.workspace = true
int-enum.workspace = true
itertools.workspace = true
log.workspace = true
nonempty.workspace = true
once_cell.workspace = true
rfd.workspace = true

[dev-dependencies]
zugkontrolle-test-util.workspace = true
difference.workspace = true
either.workspace = true
thiserror.workspace = true

[build-dependencies]
cargo_metadata.workspace = true

[lints]
workspace = true
